# AutoPatch-J

./: .gitignore  AGENTS.md  CLAUDE.md  COMMIT.md  GEMINI.md  README.md  README_CN.md  README_EN.md  pyproject.toml  run.bat  run_on_macos.sh  run_on_windows.bat
.autopatch-j/: history.txt  index.db
.pytest_temp/: test_full_fix_flow_integratedcurrent
autopatch_j/: __main__.py  artifacts.py  cli.py  context.py  decision_engine.py  doctor.py  edit_drafter.py  indexer.py  intent.py  llm.py  mentions.py  openai_responses.py  project.py  readiness.py  session.py
docs/: getting_started.md  memory_design.md
openspec/: config.yaml
scripts/: bootstrap_local_runtime.py  install_semgrep_runtime.py
tests/: test_agent_full_fix_flow.py  test_agent_react_deep.py  test_agent_stream_presenter.py  test_agent_task_profiles.py  test_artifact_manager_queue.py  test_artifacts.py  test_audit_backlog_service.py  test_backlog_manager.py  test_chat_filter.py  test_chat_filter_service.py  test_chat_service.py  test_cli_commands.py  test_cli_completer.py  test_cli_pending_progress.py  test_cli_render.py  test_cli_selection_state.py  test_cli_workflow.py  test_code_explain_flow.py  test_config.py  test_context_manager.py  test_context_window.py  test_continuity_judge_service.py  test_conversation_router.py  test_core_fetcher.py  test_core_index.py  test_core_models.py  test_core_patch.py  test_core_services.py  test_core_validator.py  test_decision_engine.py  test_doctor.py  test_draft_commands.py  test_draft_fix_commands.py  test_edit_drafter.py  test_edit_tool.py  test_end_to_end_fix.py  (+41 more)
(+291 files in other folders)
