[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autopatch-j"
version = "0.1.0"
description = "Minimal AI coding patch agent for Java repositories"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "weijianguan" }
]
dependencies = [
  "openai",
  "prompt_toolkit",
  "rich",
  "tree-sitter>=0.23.0",
  "tree-sitter-java>=0.23.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

[project.scripts]
autopatch-j = "autopatch_j.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["autopatch_j*"]

[tool.setuptools.package-data]
"autopatch_j.scanners.resources.semgrep" = ["rules/*.yml"]
